# Airport-Inspector

./: .gitignore  CMakeLists.txt  README.md  airport_database.cpp  airport_database.h  form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  statistics.cpp  statistics.h  тестирование.docx
